tests/paczka1/fuzzy1/85679829.err
Error in line 8: 6KH S524 86,9
Error in line 12: HAZjYbw2 A915 96,3
Error in line 5: A263 S524 58,8
Error in line 28: qVzUgYl A219 93,2
Error in line 34: vo20wU A915 33,0
